attempt at fixing overflow

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
   font-weight: normal;
   font-style: normal;
   min-width: 550px;
+  overflow: hidden;
 }
 
 /* line 12, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
